Added card component + basic test

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,7 +2,7 @@
   height: 10vh;
   width: 100vw;
   background-color: #e20074;
-  opacity: 0.8;
+  /* opacity: 0.8; */
   position: fixed;
   top: 0;
   padding: 10px 20px;
