--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -1,5 +1,10 @@
 .content {
   margin-top: calc( 10vh + 5px);
   background-color: #ccc;
-  height: calc( 90vh - 5px);
+}
+.card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
