--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -7,8 +7,36 @@
   border-radius: 10px;
   margin: 10px 0;
   background-color: #ffe;
-  padding: 15px 25px;
+  padding: 15px;
+}
+/* Top */
+.card-top {
+  height: 2em;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.card-attachments>i {
+  margin: 5px;
+}
+.card-attachments>i.greyed {
+  opacity: 0.4;
+}
+
+/* COntent */
+.card-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0 10px;
 }
 .card-title {
-  font-family: 'Bree Serif';
+  font-family: 'Exo', sans-serif;
+  text-align: left;
+}
+.card-description {
+  text-align: left;
+  height: 3em; /* that's one line, 2em for 2 lines, etc... */
+  line-height: 1em; /* the height of one text line */
+  overflow:hidden;
 }
