--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>TodoMVC app</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo|Gugi" rel="stylesheet">
   <% if(__PROD__) { %><script src="cordova.js"></script><% } %>
 </head>
 <body>
