--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,17 +1,19 @@
 .header {
-  height: 10vh;
   width: 100vw;
-  background-color: #e20074;
-  /* opacity: 0.8; */
+  height: 6vh;
+  background-color: #fff;
   position: fixed;
   top: 0;
   padding: 10px 20px;
   display: flex;
   align-items: center;
-  box-shadow: 0 8px 5px #aaa;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(0,0,0, 0.3);
+  z-index: 200;
 }
 .title {
-  font-family: 'Gugi', cursive;
+  font-family: 'Arvo', serif;
+  /* text-transform: uppercase; */
   font-size: 20px;
-  color: #fff;
+  color: #000;
 }
