--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>TodoMVC app</title>
+  <title>NotesApp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Exo|Gugi" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Arvo|Fira+Sans|Comfortaa" rel="stylesheet">
   <% if(__PROD__) { %><script src="cordova.js"></script><% } %>
 </head>
 <body>
