--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 .header {
   width: 100vw;
   height: 6vh;
-  background-color: #fff;
+  background-color: #46b5ff;
   position: fixed;
   top: 0;
   padding: 10px 20px;
