--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,11 +15,12 @@
 .header>.material-icons {
   width: 30px;
   font-size: 30px;
+  color: #fff;
 }
 
 .title {
   font-family: 'Arvo', serif;
   /* text-transform: uppercase; */
   font-size: 20px;
-  color: #000;
+  color: #fff;
 }
